--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <h3>Note that it the number codes doesn't respond to changes in Case.</h3>
         <h3>The keys clicked in succession e.g <code>Shift + S</code> and <code>Ctrl + V</code> are both recorded as different clicks.</h3>
+        <p class="mode">Dark Mode</p>
     </header>
     <main></main>
 </body>
