Comment the 'virtual keyboard' skeleton

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Key Code</title>
 </head>
 <body>
-    <!-- <header>
+    <header>
         <h3>The keys clicked in succession e.g <code>Shift + S</code> and <code>Ctrl + V</code> are both recorded as different clicks.</h3>
         <p class="mode">Dark Mode</p>
-    </header> -->
-    <main></main>
+    </header>
+<!--     <main></main>
     <aside>
         <div id="container">
             <textarea id="write" cols="60" rows="6"></textarea>
@@ -74,6 +74,6 @@
                 <li class="space lastitem">&nbsp;</li>
             </ul>
         </div>
-    </aside>
+    </aside> -->
 </body>
 </html>
