--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h3>The keys clicked in succession e.g <code>Shift + S</code> and <code>Ctrl + V</code> are both recorded as different clicks.</h3>
         <p class="mode">Dark Mode</p>
+        <a href="./keyboard.html">keyboard</a>
     </header>
     <main></main>
 </body>
