--- a/keyboard.html
+++ b/keyboard.html
@@ -9,8 +9,7 @@
     <title>Keyboard</title>
 </head>
 <body>
-    <a href="./index.html">Home</a>
-    <textarea id="input-text-area" cols="100" rows="5"></textarea>
+    <a href="./index.html">KeyCode</a>
     <div id="keyboard-container">
         <div class="keys">
             <div class="row0">
